@@ -29,15 +29,11 @@ if [ -d ${current_dir}/local/update ]; then
 		mkdir ${current_dir}/store
 	fi
 	if [ -f ${current_dir}/local/update/o2server/version.o2 ]; then
-		if [ -d ${current_dir}/local/update/o2server/config ]; then
-			if [ -d ${current_dir}/local/update/o2server/config/sample ]; then
-				cp -Rf ${current_dir}/local/update/o2server/config/sample ${current_dir}/config/
-			fi
+		if [ -d ${current_dir}/local/update/o2server/configSample ]; then
+			cp -Rf ${current_dir}/local/update/o2server/configSample ${current_dir}/
 		fi
-		if [ -d ${current_dir}/local/update/o2server/local ]; then
-			if [ -d ${current_dir}/local/update/o2server/local/sample ]; then
-				cp -Rf ${current_dir}/local/update/o2server/local/sample ${current_dir}/local/
-			fi
+		if [ -d ${current_dir}/local/update/o2server/localSample ]; then
+			cp -Rf ${current_dir}/local/update/o2server/localSample ${current_dir}/
 		fi
 		if [ -d ${current_dir}/local/update/o2server/commons ]; then
 			cp -Rf ${current_dir}/local/update/o2server/commons ${current_dir}/
@@ -63,6 +59,9 @@ if [ -d ${current_dir}/local/update ]; then
 		if [ -f ${current_dir}/start_windows.bat ]; then
 			cp -f ${current_dir}/local/update/o2server/start_windows.bat ${current_dir}/
 		fi
+		if [ -f ${current_dir}/start_windows_debug.bat ]; then
+			cp -f ${current_dir}/local/update/o2server/start_windows_debug.bat ${current_dir}/
+		fi
 		if [ -f ${current_dir}/stop_windows.bat ]; then
 			cp -f ${current_dir}/local/update/o2server/stop_windows.bat ${current_dir}/
 		fi
@@ -75,6 +74,9 @@ if [ -d ${current_dir}/local/update ]; then
 		if [ -f ${current_dir}/start_linux.sh ]; then
 			cp -f ${current_dir}/local/update/o2server/start_linux.sh ${current_dir}/
 		fi
+		if [ -f ${current_dir}/start_linux_debug.sh ]; then
+			cp -f ${current_dir}/local/update/o2server/start_linux_debug.sh ${current_dir}/
+		fi
 		if [ -f ${current_dir}/stop_linux.sh ]; then
 			cp -f ${current_dir}/local/update/o2server/stop_linux.sh ${current_dir}/
 		fi
@@ -83,6 +85,9 @@ if [ -d ${current_dir}/local/update ]; then
 		fi
 		if [ -f ${current_dir}/start_macos.sh ]; then
 			cp -f ${current_dir}/local/update/o2server/start_macos.sh ${current_dir}/
+		fi
+		if [ -f ${current_dir}/start_macos_debug.sh ]; then
+			cp -f ${current_dir}/local/update/o2server/start_macos_debug.sh ${current_dir}/
 		fi
 		if [ -f ${current_dir}/stop_macos.sh ]; then
 			cp -f ${current_dir}/local/update/o2server/stop_macos.sh ${current_dir}/
@@ -93,6 +98,9 @@ if [ -d ${current_dir}/local/update ]; then
 		if [ -f ${current_dir}/start_aix.sh ]; then
 			cp -f ${current_dir}/local/update/o2server/start_aix.sh ${current_dir}/
 		fi
+		if [ -f ${current_dir}/start_aix_debug.sh ]; then
+			cp -f ${current_dir}/local/update/o2server/start_aix_debug.sh ${current_dir}/
+		fi
 		if [ -f ${current_dir}/stop_aix.sh ]; then
 			cp -f ${current_dir}/local/update/o2server/stop_aix.sh ${current_dir}/
 		fi
@@ -102,14 +110,29 @@ if [ -d ${current_dir}/local/update ]; then
 		if [ -f ${current_dir}/start_neokylin_loongson.sh ]; then
 			cp -f ${current_dir}/local/update/o2server/start_neokylin_loongson.sh ${current_dir}/
 		fi
-		if [ -f ${current_dir}/stop_aix.sh ]; then
+		if [ -f ${current_dir}/start_neokylin_loongson_debug.sh ]; then
+			cp -f ${current_dir}/local/update/o2server/start_neokylin_loongson_debug.sh ${current_dir}/
+		fi
+		if [ -f ${current_dir}/stop_neokylin_loongson.sh ]; then
 			cp -f ${current_dir}/local/update/o2server/stop_neokylin_loongson.sh ${current_dir}/
 		fi
-		if [ -f ${current_dir}/console_aix.sh ]; then
+		if [ -f ${current_dir}/console_neokylin_loongson.sh ]; then
 			cp -f ${current_dir}/local/update/o2server/console_neokylin_loongson.sh ${current_dir}/
 		fi
+		if [ -f ${current_dir}/start_raspberrypi.sh ]; then
+			cp -f ${current_dir}/local/update/o2server/start_raspberrypi.sh ${current_dir}/
+		fi
+		if [ -f ${current_dir}/start_raspberrypi_debug.sh ]; then
+			cp -f ${current_dir}/local/update/o2server/start_raspberrypi_debug.sh ${current_dir}/
+		fi
+		if [ -f ${current_dir}/stop_raspberrypi.sh ]; then
+			cp -f ${current_dir}/local/update/o2server/stop_raspberrypi.sh ${current_dir}/
+		fi
+		if [ -f ${current_dir}/console_raspberrypi.sh ]; then
+			cp -f ${current_dir}/local/update/o2server/console_raspberrypi.sh ${current_dir}/
+		fi
 		cp ${current_dir}/local/update/o2server/version.o2 ${current_dir}/
-		sudo rm -Rf ${current_dir}/local/update
+		rm -Rf ${current_dir}/local/update
 	fi
 fi
-sudo ${current_dir}/jvm/macos/bin/java -Djava.awt.headless=true -Xms2g -XX:+UseConcMarkSweepGC -jar ${current_dir}/console.jar
+sudo ${current_dir}/jvm/macos/bin/java -server -Djava.awt.headless=true -Xms2g -Xmx8g -XX:+UseG1GC -XX:+HeapDumpOnOutOfMemoryError -jar ${current_dir}/console.jar
